// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`frodo agent gateway export "frodo agent gateway export --agent-id frodo-test-ig-agent": should export the gateway agent with agent id "frodo-test-ig-agent" 1`] = `0`;

exports[`frodo agent gateway export "frodo agent gateway export --agent-id frodo-test-ig-agent": should export the gateway agent with agent id "frodo-test-ig-agent" 2`] = `""`;

exports[`frodo agent gateway export "frodo agent gateway export --agent-id frodo-test-ig-agent": should export the gateway agent with agent id "frodo-test-ig-agent": frodo-test-ig-agent.gateway.agent.json 1`] = `
{
  "agent": {
    "frodo-test-ig-agent": {
      "_id": "frodo-test-ig-agent",
      "_type": {
        "_id": "IdentityGatewayAgent",
        "collection": true,
        "name": "Identity Gateway Agents",
      },
      "agentgroup": "test_ig_group",
      "igCdssoLoginUrlTemplate": {
        "inherited": false,
        "value": "http://testurl.com:8080/frodo",
      },
      "igCdssoRedirectUrls": {
        "inherited": false,
        "value": [
          "http://testurl.com:8080/frodo",
        ],
      },
      "igTokenIntrospection": {
        "inherited": false,
        "value": "Realm",
      },
      "secretLabelIdentifier": null,
      "status": {
        "inherited": false,
        "value": "Inactive",
      },
    },
  },
  "meta": Any<Object>,
}
`;

exports[`frodo agent gateway export "frodo agent gateway export --all": should export all gateway agents to a single file 1`] = `0`;

exports[`frodo agent gateway export "frodo agent gateway export --all": should export all gateway agents to a single file 2`] = `""`;

exports[`frodo agent gateway export "frodo agent gateway export --all": should export all gateway agents to a single file: allAlphaAgents.gateway.agent.json 1`] = `
{
  "agent": {
    "cdsso-ig-agent": {
      "_id": "cdsso-ig-agent",
      "_type": {
        "_id": "IdentityGatewayAgent",
        "collection": true,
        "name": "Identity Gateway Agents",
      },
      "agentgroup": null,
      "igCdssoLoginUrlTemplate": null,
      "igCdssoRedirectUrls": [
        "https://volker-demo.encore.forgerock.com:443/apps/hrlite/redirect",
        "https://volker-demo.encore.forgerock.com/apps/hrlite/redirect",
        "https://volker-demo.encore.forgerock.com:443/apps/hrlite-rest/redirect",
        "https://volker-demo.encore.forgerock.com:443/apps/contractor/redirect",
        "https://volker-demo.encore.forgerock.com/apps/hrlite-rest/redirect",
        "https://volker-demo.encore.forgerock.com/apps/contractor/redirect",
      ],
      "igTokenIntrospection": "Realm_Subs",
      "secretLabelIdentifier": null,
      "status": "Active",
    },
    "frodo-test-ig-agent": {
      "_id": "frodo-test-ig-agent",
      "_type": {
        "_id": "IdentityGatewayAgent",
        "collection": true,
        "name": "Identity Gateway Agents",
      },
      "agentgroup": "test_ig_group",
      "igCdssoLoginUrlTemplate": "http://testurl.com:8080/frodo",
      "igCdssoRedirectUrls": [
        "http://testurl.com:8080/frodo",
      ],
      "igTokenIntrospection": "Realm",
      "secretLabelIdentifier": null,
      "status": "Inactive",
    },
    "frodo-test-ig-agent2": {
      "_id": "frodo-test-ig-agent2",
      "_type": {
        "_id": "IdentityGatewayAgent",
        "collection": true,
        "name": "Identity Gateway Agents",
      },
      "agentgroup": null,
      "igCdssoLoginUrlTemplate": "http://testurl.com:8080/frodo",
      "igCdssoRedirectUrls": [
        "http://testurl.com:8080/frodo",
      ],
      "igTokenIntrospection": "Realm",
      "secretLabelIdentifier": null,
      "status": "Inactive",
    },
    "ig-agent": {
      "_id": "ig-agent",
      "_type": {
        "_id": "IdentityGatewayAgent",
        "collection": true,
        "name": "Identity Gateway Agents",
      },
      "agentgroup": null,
      "igCdssoLoginUrlTemplate": null,
      "igCdssoRedirectUrls": [],
      "igTokenIntrospection": "Realm_Subs",
      "secretLabelIdentifier": null,
      "status": "Active",
    },
  },
  "meta": Any<Object>,
}
`;

exports[`frodo agent gateway export "frodo agent gateway export --all-separate --no-metadata --directory agentGatewayExportTestDir3": should export all gateway agents to separate files in the directory agentGatewayExportTestDir3 1`] = `0`;

exports[`frodo agent gateway export "frodo agent gateway export --all-separate --no-metadata --directory agentGatewayExportTestDir3": should export all gateway agents to separate files in the directory agentGatewayExportTestDir3 2`] = `""`;

exports[`frodo agent gateway export "frodo agent gateway export --all-separate --no-metadata --directory agentGatewayExportTestDir3": should export all gateway agents to separate files in the directory agentGatewayExportTestDir3: agentGatewayExportTestDir3/cdsso-ig-agent.gateway.agent.json 1`] = `
{
  "agent": {
    "cdsso-ig-agent": {
      "_id": "cdsso-ig-agent",
      "_type": {
        "_id": "IdentityGatewayAgent",
        "collection": true,
        "name": "Identity Gateway Agents",
      },
      "agentgroup": null,
      "igCdssoLoginUrlTemplate": null,
      "igCdssoRedirectUrls": [
        "https://volker-demo.encore.forgerock.com:443/apps/hrlite/redirect",
        "https://volker-demo.encore.forgerock.com/apps/hrlite/redirect",
        "https://volker-demo.encore.forgerock.com:443/apps/hrlite-rest/redirect",
        "https://volker-demo.encore.forgerock.com:443/apps/contractor/redirect",
        "https://volker-demo.encore.forgerock.com/apps/hrlite-rest/redirect",
        "https://volker-demo.encore.forgerock.com/apps/contractor/redirect",
      ],
      "igTokenIntrospection": "Realm_Subs",
      "secretLabelIdentifier": null,
      "status": "Active",
    },
  },
}
`;

exports[`frodo agent gateway export "frodo agent gateway export --all-separate --no-metadata --directory agentGatewayExportTestDir3": should export all gateway agents to separate files in the directory agentGatewayExportTestDir3: agentGatewayExportTestDir3/frodo-test-ig-agent.gateway.agent.json 1`] = `
{
  "agent": {
    "frodo-test-ig-agent": {
      "_id": "frodo-test-ig-agent",
      "_type": {
        "_id": "IdentityGatewayAgent",
        "collection": true,
        "name": "Identity Gateway Agents",
      },
      "agentgroup": "test_ig_group",
      "igCdssoLoginUrlTemplate": "http://testurl.com:8080/frodo",
      "igCdssoRedirectUrls": [
        "http://testurl.com:8080/frodo",
      ],
      "igTokenIntrospection": "Realm",
      "secretLabelIdentifier": null,
      "status": "Inactive",
    },
  },
}
`;

exports[`frodo agent gateway export "frodo agent gateway export --all-separate --no-metadata --directory agentGatewayExportTestDir3": should export all gateway agents to separate files in the directory agentGatewayExportTestDir3: agentGatewayExportTestDir3/frodo-test-ig-agent2.gateway.agent.json 1`] = `
{
  "agent": {
    "frodo-test-ig-agent2": {
      "_id": "frodo-test-ig-agent2",
      "_type": {
        "_id": "IdentityGatewayAgent",
        "collection": true,
        "name": "Identity Gateway Agents",
      },
      "agentgroup": null,
      "igCdssoLoginUrlTemplate": "http://testurl.com:8080/frodo",
      "igCdssoRedirectUrls": [
        "http://testurl.com:8080/frodo",
      ],
      "igTokenIntrospection": "Realm",
      "secretLabelIdentifier": null,
      "status": "Inactive",
    },
  },
}
`;

exports[`frodo agent gateway export "frodo agent gateway export --all-separate --no-metadata --directory agentGatewayExportTestDir3": should export all gateway agents to separate files in the directory agentGatewayExportTestDir3: agentGatewayExportTestDir3/ig-agent.gateway.agent.json 1`] = `
{
  "agent": {
    "ig-agent": {
      "_id": "ig-agent",
      "_type": {
        "_id": "IdentityGatewayAgent",
        "collection": true,
        "name": "Identity Gateway Agents",
      },
      "agentgroup": null,
      "igCdssoLoginUrlTemplate": null,
      "igCdssoRedirectUrls": [],
      "igTokenIntrospection": "Realm_Subs",
      "secretLabelIdentifier": null,
      "status": "Active",
    },
  },
}
`;

exports[`frodo agent gateway export "frodo agent gateway export -A": should export all gateway agents to separate files 1`] = `0`;

exports[`frodo agent gateway export "frodo agent gateway export -A": should export all gateway agents to separate files 2`] = `""`;

exports[`frodo agent gateway export "frodo agent gateway export -A": should export all gateway agents to separate files: cdsso-ig-agent.gateway.agent.json 1`] = `
{
  "agent": {
    "cdsso-ig-agent": {
      "_id": "cdsso-ig-agent",
      "_type": {
        "_id": "IdentityGatewayAgent",
        "collection": true,
        "name": "Identity Gateway Agents",
      },
      "agentgroup": null,
      "igCdssoLoginUrlTemplate": null,
      "igCdssoRedirectUrls": [
        "https://volker-demo.encore.forgerock.com:443/apps/hrlite/redirect",
        "https://volker-demo.encore.forgerock.com/apps/hrlite/redirect",
        "https://volker-demo.encore.forgerock.com:443/apps/hrlite-rest/redirect",
        "https://volker-demo.encore.forgerock.com:443/apps/contractor/redirect",
        "https://volker-demo.encore.forgerock.com/apps/hrlite-rest/redirect",
        "https://volker-demo.encore.forgerock.com/apps/contractor/redirect",
      ],
      "igTokenIntrospection": "Realm_Subs",
      "secretLabelIdentifier": null,
      "status": "Active",
    },
  },
  "meta": Any<Object>,
}
`;

exports[`frodo agent gateway export "frodo agent gateway export -A": should export all gateway agents to separate files: frodo-test-ig-agent.gateway.agent.json 1`] = `
{
  "agent": {
    "frodo-test-ig-agent": {
      "_id": "frodo-test-ig-agent",
      "_type": {
        "_id": "IdentityGatewayAgent",
        "collection": true,
        "name": "Identity Gateway Agents",
      },
      "agentgroup": "test_ig_group",
      "igCdssoLoginUrlTemplate": "http://testurl.com:8080/frodo",
      "igCdssoRedirectUrls": [
        "http://testurl.com:8080/frodo",
      ],
      "igTokenIntrospection": "Realm",
      "secretLabelIdentifier": null,
      "status": "Inactive",
    },
  },
  "meta": Any<Object>,
}
`;

exports[`frodo agent gateway export "frodo agent gateway export -A": should export all gateway agents to separate files: frodo-test-ig-agent2.gateway.agent.json 1`] = `
{
  "agent": {
    "frodo-test-ig-agent2": {
      "_id": "frodo-test-ig-agent2",
      "_type": {
        "_id": "IdentityGatewayAgent",
        "collection": true,
        "name": "Identity Gateway Agents",
      },
      "agentgroup": null,
      "igCdssoLoginUrlTemplate": "http://testurl.com:8080/frodo",
      "igCdssoRedirectUrls": [
        "http://testurl.com:8080/frodo",
      ],
      "igTokenIntrospection": "Realm",
      "secretLabelIdentifier": null,
      "status": "Inactive",
    },
  },
  "meta": Any<Object>,
}
`;

exports[`frodo agent gateway export "frodo agent gateway export -A": should export all gateway agents to separate files: ig-agent.gateway.agent.json 1`] = `
{
  "agent": {
    "ig-agent": {
      "_id": "ig-agent",
      "_type": {
        "_id": "IdentityGatewayAgent",
        "collection": true,
        "name": "Identity Gateway Agents",
      },
      "agentgroup": null,
      "igCdssoLoginUrlTemplate": null,
      "igCdssoRedirectUrls": [],
      "igTokenIntrospection": "Realm_Subs",
      "secretLabelIdentifier": null,
      "status": "Active",
    },
  },
  "meta": Any<Object>,
}
`;

exports[`frodo agent gateway export "frodo agent gateway export -NaD agentGatewayExportTestDir2": should export all gateway agents to a single file in the directory agentGatewayExportTestDir2 1`] = `0`;

exports[`frodo agent gateway export "frodo agent gateway export -NaD agentGatewayExportTestDir2": should export all gateway agents to a single file in the directory agentGatewayExportTestDir2 2`] = `""`;

exports[`frodo agent gateway export "frodo agent gateway export -NaD agentGatewayExportTestDir2": should export all gateway agents to a single file in the directory agentGatewayExportTestDir2: agentGatewayExportTestDir2/allAlphaAgents.gateway.agent.json 1`] = `
{
  "agent": {
    "cdsso-ig-agent": {
      "_id": "cdsso-ig-agent",
      "_type": {
        "_id": "IdentityGatewayAgent",
        "collection": true,
        "name": "Identity Gateway Agents",
      },
      "agentgroup": null,
      "igCdssoLoginUrlTemplate": null,
      "igCdssoRedirectUrls": [
        "https://volker-demo.encore.forgerock.com:443/apps/hrlite/redirect",
        "https://volker-demo.encore.forgerock.com/apps/hrlite/redirect",
        "https://volker-demo.encore.forgerock.com:443/apps/hrlite-rest/redirect",
        "https://volker-demo.encore.forgerock.com:443/apps/contractor/redirect",
        "https://volker-demo.encore.forgerock.com/apps/hrlite-rest/redirect",
        "https://volker-demo.encore.forgerock.com/apps/contractor/redirect",
      ],
      "igTokenIntrospection": "Realm_Subs",
      "secretLabelIdentifier": null,
      "status": "Active",
    },
    "frodo-test-ig-agent": {
      "_id": "frodo-test-ig-agent",
      "_type": {
        "_id": "IdentityGatewayAgent",
        "collection": true,
        "name": "Identity Gateway Agents",
      },
      "agentgroup": "test_ig_group",
      "igCdssoLoginUrlTemplate": "http://testurl.com:8080/frodo",
      "igCdssoRedirectUrls": [
        "http://testurl.com:8080/frodo",
      ],
      "igTokenIntrospection": "Realm",
      "secretLabelIdentifier": null,
      "status": "Inactive",
    },
    "frodo-test-ig-agent2": {
      "_id": "frodo-test-ig-agent2",
      "_type": {
        "_id": "IdentityGatewayAgent",
        "collection": true,
        "name": "Identity Gateway Agents",
      },
      "agentgroup": null,
      "igCdssoLoginUrlTemplate": "http://testurl.com:8080/frodo",
      "igCdssoRedirectUrls": [
        "http://testurl.com:8080/frodo",
      ],
      "igTokenIntrospection": "Realm",
      "secretLabelIdentifier": null,
      "status": "Inactive",
    },
    "ig-agent": {
      "_id": "ig-agent",
      "_type": {
        "_id": "IdentityGatewayAgent",
        "collection": true,
        "name": "Identity Gateway Agents",
      },
      "agentgroup": null,
      "igCdssoLoginUrlTemplate": null,
      "igCdssoRedirectUrls": [],
      "igTokenIntrospection": "Realm_Subs",
      "secretLabelIdentifier": null,
      "status": "Active",
    },
  },
}
`;

exports[`frodo agent gateway export "frodo agent gateway export -Ni frodo-test-ig-agent -D agentGatewayExportTestDir1": should export the gateway agent with agent id "frodo-test-ig-agent" into the directory named agentGatewayExportTestDir1 1`] = `0`;

exports[`frodo agent gateway export "frodo agent gateway export -Ni frodo-test-ig-agent -D agentGatewayExportTestDir1": should export the gateway agent with agent id "frodo-test-ig-agent" into the directory named agentGatewayExportTestDir1 2`] = `""`;

exports[`frodo agent gateway export "frodo agent gateway export -Ni frodo-test-ig-agent -D agentGatewayExportTestDir1": should export the gateway agent with agent id "frodo-test-ig-agent" into the directory named agentGatewayExportTestDir1: agentGatewayExportTestDir1/frodo-test-ig-agent.gateway.agent.json 1`] = `
{
  "agent": {
    "frodo-test-ig-agent": {
      "_id": "frodo-test-ig-agent",
      "_type": {
        "_id": "IdentityGatewayAgent",
        "collection": true,
        "name": "Identity Gateway Agents",
      },
      "agentgroup": "test_ig_group",
      "igCdssoLoginUrlTemplate": {
        "inherited": false,
        "value": "http://testurl.com:8080/frodo",
      },
      "igCdssoRedirectUrls": {
        "inherited": false,
        "value": [
          "http://testurl.com:8080/frodo",
        ],
      },
      "igTokenIntrospection": {
        "inherited": false,
        "value": "Realm",
      },
      "secretLabelIdentifier": null,
      "status": {
        "inherited": false,
        "value": "Inactive",
      },
    },
  },
}
`;

exports[`frodo agent gateway export "frodo agent gateway export -a --file my-allAlphaAgents.gateway.agent.json": should export all gateway agents to a single file named my-allAlphaAgents.gateway.agent.json 1`] = `0`;

exports[`frodo agent gateway export "frodo agent gateway export -a --file my-allAlphaAgents.gateway.agent.json": should export all gateway agents to a single file named my-allAlphaAgents.gateway.agent.json 2`] = `""`;

exports[`frodo agent gateway export "frodo agent gateway export -a --file my-allAlphaAgents.gateway.agent.json": should export all gateway agents to a single file named my-allAlphaAgents.gateway.agent.json: my-allAlphaAgents.gateway.agent.json 1`] = `
{
  "agent": {
    "cdsso-ig-agent": {
      "_id": "cdsso-ig-agent",
      "_type": {
        "_id": "IdentityGatewayAgent",
        "collection": true,
        "name": "Identity Gateway Agents",
      },
      "agentgroup": null,
      "igCdssoLoginUrlTemplate": null,
      "igCdssoRedirectUrls": [
        "https://volker-demo.encore.forgerock.com:443/apps/hrlite/redirect",
        "https://volker-demo.encore.forgerock.com/apps/hrlite/redirect",
        "https://volker-demo.encore.forgerock.com:443/apps/hrlite-rest/redirect",
        "https://volker-demo.encore.forgerock.com:443/apps/contractor/redirect",
        "https://volker-demo.encore.forgerock.com/apps/hrlite-rest/redirect",
        "https://volker-demo.encore.forgerock.com/apps/contractor/redirect",
      ],
      "igTokenIntrospection": "Realm_Subs",
      "secretLabelIdentifier": null,
      "status": "Active",
    },
    "frodo-test-ig-agent": {
      "_id": "frodo-test-ig-agent",
      "_type": {
        "_id": "IdentityGatewayAgent",
        "collection": true,
        "name": "Identity Gateway Agents",
      },
      "agentgroup": "test_ig_group",
      "igCdssoLoginUrlTemplate": "http://testurl.com:8080/frodo",
      "igCdssoRedirectUrls": [
        "http://testurl.com:8080/frodo",
      ],
      "igTokenIntrospection": "Realm",
      "secretLabelIdentifier": null,
      "status": "Inactive",
    },
    "frodo-test-ig-agent2": {
      "_id": "frodo-test-ig-agent2",
      "_type": {
        "_id": "IdentityGatewayAgent",
        "collection": true,
        "name": "Identity Gateway Agents",
      },
      "agentgroup": null,
      "igCdssoLoginUrlTemplate": "http://testurl.com:8080/frodo",
      "igCdssoRedirectUrls": [
        "http://testurl.com:8080/frodo",
      ],
      "igTokenIntrospection": "Realm",
      "secretLabelIdentifier": null,
      "status": "Inactive",
    },
    "ig-agent": {
      "_id": "ig-agent",
      "_type": {
        "_id": "IdentityGatewayAgent",
        "collection": true,
        "name": "Identity Gateway Agents",
      },
      "agentgroup": null,
      "igCdssoLoginUrlTemplate": null,
      "igCdssoRedirectUrls": [],
      "igTokenIntrospection": "Realm_Subs",
      "secretLabelIdentifier": null,
      "status": "Active",
    },
  },
  "meta": Any<Object>,
}
`;

exports[`frodo agent gateway export "frodo agent gateway export -i frodo-test-ig-agent -f my-frodo-test-ig-agent.gateway.agent.json.json": should export the gateway agent with agent id "frodo-test-ig-agent" into file named my-frodo-test-ig-agent.gateway.agent.json 1`] = `0`;

exports[`frodo agent gateway export "frodo agent gateway export -i frodo-test-ig-agent -f my-frodo-test-ig-agent.gateway.agent.json.json": should export the gateway agent with agent id "frodo-test-ig-agent" into file named my-frodo-test-ig-agent.gateway.agent.json 2`] = `""`;

exports[`frodo agent gateway export "frodo agent gateway export -i frodo-test-ig-agent -f my-frodo-test-ig-agent.gateway.agent.json.json": should export the gateway agent with agent id "frodo-test-ig-agent" into file named my-frodo-test-ig-agent.gateway.agent.json: my-frodo-test-ig-agent.gateway.agent.json.json 1`] = `
{
  "agent": {
    "frodo-test-ig-agent": {
      "_id": "frodo-test-ig-agent",
      "_type": {
        "_id": "IdentityGatewayAgent",
        "collection": true,
        "name": "Identity Gateway Agents",
      },
      "agentgroup": "test_ig_group",
      "igCdssoLoginUrlTemplate": {
        "inherited": false,
        "value": "http://testurl.com:8080/frodo",
      },
      "igCdssoRedirectUrls": {
        "inherited": false,
        "value": [
          "http://testurl.com:8080/frodo",
        ],
      },
      "igTokenIntrospection": {
        "inherited": false,
        "value": "Realm",
      },
      "secretLabelIdentifier": null,
      "status": {
        "inherited": false,
        "value": "Inactive",
      },
    },
  },
  "meta": Any<Object>,
}
`;
